# retro

./: .gitignore  Cargo.toml  README.md  SECURITY_ISSUES.md
client/: README.md  package.json
client/src/: i18n.js  index.html  main.js  style.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: commands.rs  lib.rs  main.rs  ws.rs
client/src/locales/: ar.json  de.json  en.json  es.json  fr.json  hi.json  id.json  ja.json  ko.json  pt.json  ru.json  th.json  vi.json  zh.json
crypto/: Cargo.toml
crypto/src/: encryption.rs  exchange.rs  keys.rs  lib.rs  ratchet.rs  registry.rs  types.rs
registry/: Cargo.toml
registry/src/: main.rs  state.rs
server/: Cargo.toml
server/src/: cleanup.rs  heartbeat.rs  main.rs  room.rs  state.rs  ws.rs
