[package]
name = "retro-crypto"
description = "Core cryptographic library for the Retro anonymous chat application"
version.workspace = true
edition.workspace = true

[dependencies]
# Key exchange & signatures
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rsa = { version = "0.9", features = ["sha2"] }

# Symmetric encryption (double-wrapped)
chacha20poly1305 = "0.10"
aes-gcm = "0.10"

# Key derivation
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"

# Randomness
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }

# Memory safety
zeroize = { version = "1", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Error handling
thiserror = "2"
