[package]
name = "retro-registry"
description = "Central server registry for the Retro anonymous chat network — heartbeat-based discovery"
version.workspace = true
edition.workspace = true

[[bin]]
name = "retro-registry"
path = "src/main.rs"

[dependencies]
retro-crypto = { path = "../crypto" }

# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
dashmap = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
