[package]
name = "retro-server"
description = "Encrypted WebSocket relay server for the Retro anonymous chat application"
version.workspace = true
edition.workspace = true

[dependencies]
retro-crypto = { path = "../crypto" }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
rand = "0.8"
futures = "0.3"

# CLI arguments
clap = { version = "4", features = ["derive"] }

# Logging (no user data ever logged)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
